--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",                                  
-    "module": "ES2020",                                  
+    "module": "commonjs",                                  
     "rootDir": "./src",
     "outDir": "./dist",
     "declaration": true,
